--- a/mystyles.css
+++ b/mystyles.css
@@ -26,19 +26,80 @@
   background-color: gray;
   width: 80%;
   height: 350px;
-  margin-right: auto;
-  margin-left: auto;
   color: white;
   padding-top: 70px;
   padding-left: 30px;
   padding-right: 30px;
   font-size: 16px;
+  margin-right: auto;
+  margin-left: auto;
 
    }
 /* Simple Responsive Framework. */
-.row {
+  .row {
   width: 100%;
+  
    }
+  
+
+   .parent{
+    
+     border:1px solid white;
+     position: relative;
+   }
+
+   .child{
+    border:1px solid black;
+    position: absolute;
+    width:170px;
+    height: 50px;
+    right:53px;
+    top:17px;
+    text-align: center;
+    padding-top: 10px;
+    background-color: #FFB6C1;
+
+   }
+
+    .parent2{
+    
+     border:1px solid white;
+     position: relative;
+   }
+
+   .child2{
+    border:1px solid black;
+    position: absolute;
+    width:170px;
+    height: 50px;
+    right:53px;
+    top:17px;
+    text-align: center;
+    padding-top: 10px;
+    background-color: red;
+
+   }
+
+    .parent3{
+    
+     border:1px solid white;
+     position: relative;
+   }
+
+   .child3{
+    border:1px solid black;
+    position: absolute;
+    width:170px;
+    height: 50px;
+    right:53px;
+    top:17px;
+    text-align: center;
+    padding-top: 10px;
+    background-color: #D2B48C;
+
+   }
+
+   
 
    @media (min-width: 992px) {
    /* for desktop */
@@ -179,9 +240,3 @@
 
  }
 
- #div1{
- 	float: :left;
- 	border:1px solid green;
- 	
- }
- 
