--- a/mystyles.css
+++ b/mystyles.css
@@ -21,20 +21,7 @@
     font-size: 28px;
    }
 
-  p {
-  border: 1px solid black;
-  background-color: gray;
-  width: 80%;
-  height: 350px;
-  color: white;
-  padding-top: 70px;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 16px;
-  margin-right: auto;
-  margin-left: auto;
-
-   }
+  
 /* Simple Responsive Framework. */
   .row {
   width: 100%;
@@ -43,58 +30,74 @@
   
 
    .parent{
-    
-     border:1px solid white;
      position: relative;
+     border:1px solid black;
+     background-color: gray;
+     width:80%;
+     height:350px;
+     margin-left: 30px;
+   }
+
+   p{
+    text-align: center;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+
    }
 
    .child{
     border:1px solid black;
     position: absolute;
-    width:170px;
-    height: 50px;
-    right:53px;
-    top:17px;
+    width:120px;
+    height: 40px;
+    right:0px;
+    top:0px;
     text-align: center;
-    padding-top: 10px;
     background-color: #FFB6C1;
+   
 
    }
 
     .parent2{
     
-     border:1px solid white;
-     position: relative;
+      position: relative;
+     border:1px solid black;
+     background-color: gray;
+     width:80%;
+     height:350px;
+     margin-left: 30px;
    }
 
    .child2{
     border:1px solid black;
     position: absolute;
-    width:170px;
-    height: 50px;
-    right:53px;
-    top:17px;
+    width:120px;
+    height: 40px;
+    right:0px;
+    top:0px;
     text-align: center;
-    padding-top: 10px;
     background-color: red;
-
    }
 
     .parent3{
     
-     border:1px solid white;
      position: relative;
+     border:1px solid black;
+     background-color: gray;
+     width:80%;
+     height:350px;
+     margin-left: 30px;
    }
 
    .child3{
     border:1px solid black;
     position: absolute;
-    width:170px;
-    height: 50px;
-    right:53px;
-    top:17px;
+    width:120px;
+    height: 40px;
+    right:0px;
+    top:0px;
     text-align: center;
-    padding-top: 10px;
     background-color: #D2B48C;
 
    }
@@ -186,6 +189,16 @@
   }
   .col-md-12 {
     width: 100%;
+
+  }
+
+  .parent3{
+    margin-top: 40px;
+    margin-left: 70px;
+  }
+
+  .parent{
+     margin-left: 40px;
   }
 
 
@@ -237,6 +250,13 @@
     width: 100%;
   }
 
+  .parent2{
+    margin-top: 30px;
+  }
+
+  .parent3{
+    margin-top: 30px;
+  }
 
  }
 
